--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -2762,3 +2762,316 @@
  A33_idea_6_3_desc:0 "Vernmen 6 desc"
  A33_idea_7_3:0 "Moons Surrounded by Roses"
  A33_idea_7_3_desc:0 "Vernmen 7 desc" 
+
+
+ A98_ideas_1:0 "Cestirande Ideas 1"
+ A98_ideas_1_start:0 "Cestirande Traditions 1"
+ A98_ideas_1_bonus:0 "Cestirande Ambition 1"
+ A98_idea_1_1:0 "Order of the Long Lance"
+ A98_idea_1_1_desc:0 "Cestirande 1 desc"
+ A98_idea_2_1:0 "Finest Footmen Forever Found"
+ A98_idea_2_1_desc:0 "Cestirande 2 desc"
+ A98_idea_3_1:0 "Overpopulation Through Decree"
+ A98_idea_3_1_desc:0 "Cestirande 3 desc"
+ A98_idea_4_1:0 "Anben, Anbennar"
+ A98_idea_4_1_desc:0 "Cestirande 4 desc"
+ A98_idea_5_1:0 "Compromised Compromise"
+ A98_idea_5_1_desc:0 "Cestirande 5 desc"
+ A98_idea_6_1:0 "Silver Tongues"
+ A98_idea_6_1_desc:0 "Cestirande 6 desc"
+ A98_idea_7_1:0 "Steady, Like the Luna"
+ A98_idea_7_1_desc:0 "Cestirande 7 desc"
+
+ A98_ideas_2:0 "Cestirande Ideas 2"
+ A98_ideas_2_start:0 "Cestirande Traditions 2"
+ A98_ideas_2_bonus:0 "Cestirande Ambition 2"
+ A98_idea_1_2:0 "Order of the Long Lance"
+ A98_idea_1_2_desc:0 "Cestirande 1 desc"
+ A98_idea_2_2:0 "Finest Footmen Forever Found"
+ A98_idea_2_2_desc:0 "Cestirande 2 desc"
+ A98_idea_3_2:0 "Overpopulation Through Decree"
+ A98_idea_3_2_desc:0 "Cestirande 3 desc"
+ A98_idea_4_2:0 "Anben, Anbennar"
+ A98_idea_4_2_desc:0 "Cestirande 4 desc"
+ A98_idea_5_2:0 "Compromised Compromise"
+ A98_idea_5_2_desc:0 "Cestirande 5 desc"
+ A98_idea_6_2:0 "Silver Tongues"
+ A98_idea_6_2_desc:0 "Cestirande 6 desc"
+ A98_idea_7_2:0 "Steady, Like the Luna"
+ A98_idea_7_2_desc:0 "Cestirande 7 desc" 
+
+ A98_ideas_3:0 "Cestirande Ideas 3"
+ A98_ideas_3_start:0 "Cestirande Traditions 3"
+ A98_ideas_3_bonus:0 "Cestirande Ambition 3"
+ A98_idea_1_3:0 "Order of the Long Lance"
+ A98_idea_1_3_desc:0 "Cestirande 1 desc"
+ A98_idea_2_3:0 "Finest Footmen Forever Found"
+ A98_idea_2_3_desc:0 "Cestirande 2 desc"
+ A98_idea_3_3:0 "Overpopulation Through Decree"
+ A98_idea_3_3_desc:0 "Cestirande 3 desc"
+ A98_idea_4_3:0 "Anben, Anbennar"
+ A98_idea_4_3_desc:0 "Cestirande 4 desc"
+ A98_idea_5_3:0 "Compromised Compromise"
+ A98_idea_5_3_desc:0 "Cestirande 5 desc"
+ A98_idea_6_3:0 "Silver Tongues"
+ A98_idea_6_3_desc:0 "Cestirande 6 desc"
+ A98_idea_7_3:0 "Steady, Like the Luna"
+ A98_idea_7_3_desc:0 "Cestirande 7 desc" 
+
+
+ Z03_ideas_1:0 "Bellacaire Ideas 1"
+ Z03_ideas_1_start:0 "Bellacaire Traditions 1"
+ Z03_ideas_1_bonus:0 "Bellacaire Ambition 1"
+ Z03_idea_1_1:0 "Bellac's Rock"
+ Z03_idea_1_1_desc:0 "Bellacaire 1 desc"
+ Z03_idea_2_1:0 "Finest Footmen Forever Found"
+ Z03_idea_2_1_desc:0 "Bellacaire 2 desc"
+ Z03_idea_3_1:0 "Overpopulation Through Decree"
+ Z03_idea_3_1_desc:0 "Bellacaire 3 desc"
+ Z03_idea_4_1:0 "Anben, Anbennar"
+ Z03_idea_4_1_desc:0 "Bellacaire 4 desc"
+ Z03_idea_5_1:0 "Compromised Compromise"
+ Z03_idea_5_1_desc:0 "Bellacaire 5 desc"
+ Z03_idea_6_1:0 "Silver Tongues"
+ Z03_idea_6_1_desc:0 "Bellacaire 6 desc"
+ Z03_idea_7_1:0 "Steady, Like the Luna"
+ Z03_idea_7_1_desc:0 "Bellacaire 7 desc"
+
+ Z03_ideas_2:0 "Bellacaire Ideas 2"
+ Z03_ideas_2_start:0 "Bellacaire Traditions 2"
+ Z03_ideas_2_bonus:0 "Bellacaire Ambition 2"
+ Z03_idea_1_2:0 "Bellac's Rock"
+ Z03_idea_1_2_desc:0 "Bellacaire 1 desc"
+ Z03_idea_2_2:0 "Finest Footmen Forever Found"
+ Z03_idea_2_2_desc:0 "Bellacaire 2 desc"
+ Z03_idea_3_2:0 "Overpopulation Through Decree"
+ Z03_idea_3_2_desc:0 "Bellacaire 3 desc"
+ Z03_idea_4_2:0 "Anben, Anbennar"
+ Z03_idea_4_2_desc:0 "Bellacaire 4 desc"
+ Z03_idea_5_2:0 "Compromised Compromise"
+ Z03_idea_5_2_desc:0 "Bellacaire 5 desc"
+ Z03_idea_6_2:0 "Silver Tongues"
+ Z03_idea_6_2_desc:0 "Bellacaire 6 desc"
+ Z03_idea_7_2:0 "Steady, Like the Luna"
+ Z03_idea_7_2_desc:0 "Bellacaire 7 desc" 
+
+ Z03_ideas_3:0 "Bellacaire Ideas 3"
+ Z03_ideas_3_start:0 "Bellacaire Traditions 3"
+ Z03_ideas_3_bonus:0 "Bellacaire Ambition 3"
+ Z03_idea_1_3:0 "Bellac's Rock"
+ Z03_idea_1_3_desc:0 "Bellacaire 1 desc"
+ Z03_idea_2_3:0 "Finest Footmen Forever Found"
+ Z03_idea_2_3_desc:0 "Bellacaire 2 desc"
+ Z03_idea_3_3:0 "Overpopulation Through Decree"
+ Z03_idea_3_3_desc:0 "Bellacaire 3 desc"
+ Z03_idea_4_3:0 "Anben, Anbennar"
+ Z03_idea_4_3_desc:0 "Bellacaire 4 desc"
+ Z03_idea_5_3:0 "Compromised Compromise"
+ Z03_idea_5_3_desc:0 "Bellacaire 5 desc"
+ Z03_idea_6_3:0 "Silver Tongues"
+ Z03_idea_6_3_desc:0 "Bellacaire 6 desc"
+ Z03_idea_7_3:0 "Steady, Like the Luna"
+ Z03_idea_7_3_desc:0 "Bellacaire 7 desc" 
+
+
+ A61_ideas_1:0 "Bluehart Ideas 1"
+ A61_ideas_1_start:0 "Bluehart Traditions 1"
+ A61_ideas_1_bonus:0 "Bluehart Ambition 1"
+ A61_idea_1_1:0 "Legacy of the Hartlord"
+ A61_idea_1_1_desc:0 "Bluehart 1 desc"
+ A61_idea_2_1:0 "Finest Footmen Forever Found"
+ A61_idea_2_1_desc:0 "Bluehart 2 desc"
+ A61_idea_3_1:0 "Overpopulation Through Decree"
+ A61_idea_3_1_desc:0 "Bluehart 3 desc"
+ A61_idea_4_1:0 "Anben, Anbennar"
+ A61_idea_4_1_desc:0 "Bluehart 4 desc"
+ A61_idea_5_1:0 "Compromised Compromise"
+ A61_idea_5_1_desc:0 "Bluehart 5 desc"
+ A61_idea_6_1:0 "Silver Tongues"
+ A61_idea_6_1_desc:0 "Bluehart 6 desc"
+ A61_idea_7_1:0 "Steady, Like the Luna"
+ A61_idea_7_1_desc:0 "Bluehart 7 desc"
+
+ A61_ideas_2:0 "Bluehart Ideas 2"
+ A61_ideas_2_start:0 "Bluehart Traditions 2"
+ A61_ideas_2_bonus:0 "Bluehart Ambition 2"
+ A61_idea_1_2:0 "Legacy of the Hartlord"
+ A61_idea_1_2_desc:0 "Bluehart 1 desc"
+ A61_idea_2_2:0 "Finest Footmen Forever Found"
+ A61_idea_2_2_desc:0 "Bluehart 2 desc"
+ A61_idea_3_2:0 "Overpopulation Through Decree"
+ A61_idea_3_2_desc:0 "Bluehart 3 desc"
+ A61_idea_4_2:0 "Anben, Anbennar"
+ A61_idea_4_2_desc:0 "Bluehart 4 desc"
+ A61_idea_5_2:0 "Compromised Compromise"
+ A61_idea_5_2_desc:0 "Bluehart 5 desc"
+ A61_idea_6_2:0 "Silver Tongues"
+ A61_idea_6_2_desc:0 "Bluehart 6 desc"
+ A61_idea_7_2:0 "Steady, Like the Luna"
+ A61_idea_7_2_desc:0 "Bluehart 7 desc" 
+
+ A61_ideas_3:0 "Bluehart Ideas 3"
+ A61_ideas_3_start:0 "Bluehart Traditions 3"
+ A61_ideas_3_bonus:0 "Bluehart Ambition 3"
+ A61_idea_1_3:0 "Legacy of the Hartlord"
+ A61_idea_1_3_desc:0 "Bluehart 1 desc"
+ A61_idea_2_3:0 "Finest Footmen Forever Found"
+ A61_idea_2_3_desc:0 "Bluehart 2 desc"
+ A61_idea_3_3:0 "Overpopulation Through Decree"
+ A61_idea_3_3_desc:0 "Bluehart 3 desc"
+ A61_idea_4_3:0 "Anben, Anbennar"
+ A61_idea_4_3_desc:0 "Bluehart 4 desc"
+ A61_idea_5_3:0 "Compromised Compromise"
+ A61_idea_5_3_desc:0 "Bluehart 5 desc"
+ A61_idea_6_3:0 "Silver Tongues"
+ A61_idea_6_3_desc:0 "Bluehart 6 desc"
+ A61_idea_7_3:0 "Steady, Like the Luna"
+ A61_idea_7_3_desc:0 "Bluehart 7 desc" 
+
+
+ B59_ideas_2:0 "Lunanór Ideas 2"
+ B59_ideas_2_start:0 "Lunanór Traditions 2"
+ B59_ideas_2_bonus:0 "Lunanór Ambition 2"
+ B59_idea_1_2:0 "Jacks of All Trades"
+ B59_idea_1_2_desc:0 "Lunanór 1 desc"
+ B59_idea_2_2:0 "Finest Footmen Forever Found"
+ B59_idea_2_2_desc:0 "Lunanór 2 desc"
+ B59_idea_3_2:0 "Overpopulation Through Decree"
+ B59_idea_3_2_desc:0 "Lunanór 3 desc"
+ B59_idea_4_2:0 "Anben, Anbennar"
+ B59_idea_4_2_desc:0 "Lunanór 4 desc"
+ B59_idea_5_2:0 "Folk of Luna's Shores"
+ B59_idea_5_2_desc:0 "Lunanór 5 desc"
+ B59_idea_6_2:0 "Silver Tongues"
+ B59_idea_6_2_desc:0 "Lunanór 6 desc"
+ B59_idea_7_2:0 "Steady, Like the Luna"
+ B59_idea_7_2_desc:0 "Lunanór 7 desc" 
+
+ B59_ideas_3:0 "Lunanór Ideas 3"
+ B59_ideas_3_start:0 "Lunanór Traditions 3"
+ B59_ideas_3_bonus:0 "Lunanór Ambition 3"
+ B59_idea_1_3:0 "Jacks of All Trades"
+ B59_idea_1_3_desc:0 "Lunanór 1 desc"
+ B59_idea_2_3:0 "Finest Footmen Forever Found"
+ B59_idea_2_3_desc:0 "Lunanór 2 desc"
+ B59_idea_3_3:0 "Overpopulation Through Decree"
+ B59_idea_3_3_desc:0 "Lunanór 3 desc"
+ B59_idea_4_3:0 "Anben, Anbennar"
+ B59_idea_4_3_desc:0 "Lunanór 4 desc"
+ B59_idea_5_3:0 "Folk of Luna's Shores"
+ B59_idea_5_3_desc:0 "Lunanór 5 desc"
+ B59_idea_6_3:0 "Silver Tongues"
+ B59_idea_6_3_desc:0 "Lunanór 6 desc"
+ B59_idea_7_3:0 "Steady, Like the Luna"
+ B59_idea_7_3_desc:0 "Lunanór 7 desc" 
+
+
+ W28_ideas_2:0 "Essdam Ideas 2"
+ W28_ideas_2_start:0 "Essdam Traditions 2"
+ W28_ideas_2_bonus:0 "Essdam Ambition 2"
+ W28_idea_1_2:0 "Bordersman Regiment"
+ W28_idea_1_2_desc:0 "Essdam 1 desc"
+ W28_idea_2_2:0 "Finest Footmen Forever Found"
+ W28_idea_2_2_desc:0 "Essdam 2 desc"
+ W28_idea_3_2:0 "Land of the Marshal"
+ W28_idea_3_2_desc:0 "Essdam 3 desc"
+ W28_idea_4_2:0 "Anben, Anbennar"
+ W28_idea_4_2_desc:0 "Essdam 4 desc"
+ W28_idea_5_2:0 "Dalesteel Industry"
+ W28_idea_5_2_desc:0 "Essdam 5 desc"
+ W28_idea_6_2:0 "Silver Tongues"
+ W28_idea_6_2_desc:0 "Essdam 6 desc"
+ W28_idea_7_2:0 "Damescross"
+ W28_idea_7_2_desc:0 "Essdam 7 desc" 
+
+ W28_ideas_3:0 "Essdam Ideas 3"
+ W28_ideas_3_start:0 "Essdam Traditions 3"
+ W28_ideas_3_bonus:0 "Essdam Ambition 3"
+ W28_idea_1_3:0 "Bordersman Regiment"
+ W28_idea_1_3_desc:0 "Essdam 1 desc"
+ W28_idea_2_3:0 "Finest Footmen Forever Found"
+ W28_idea_2_3_desc:0 "Essdam 2 desc"
+ W28_idea_3_3:0 "Land of the Marshal"
+ W28_idea_3_3_desc:0 "Essdam 3 desc"
+ W28_idea_4_3:0 "Anben, Anbennar"
+ W28_idea_4_3_desc:0 "Essdam 4 desc"
+ W28_idea_5_3:0 "Dalesteel Industry"
+ W28_idea_5_3_desc:0 "Essdam 5 desc"
+ W28_idea_6_3:0 "Silver Tongues"
+ W28_idea_6_3_desc:0 "Essdam 6 desc"
+ W28_idea_7_3:0 "Damescross"
+ W28_idea_7_3_desc:0 "Essdam 7 desc" 
+
+
+ W27_ideas_2:0 "Damenaire Ideas 2"
+ W27_ideas_2_start:0 "Damenaire Traditions 2"
+ W27_ideas_2_bonus:0 "Damenaire Ambition 2"
+ W27_idea_1_2:0 "Cannor's Heart"
+ W27_idea_1_2_desc:0 "Damenaire 1 desc"
+ W27_idea_2_2:0 "Finest Footmen Forever Found"
+ W27_idea_2_2_desc:0 "Damenaire 2 desc"
+ W27_idea_3_2:0 "Urban Folk"
+ W27_idea_3_2_desc:0 "Damenaire 3 desc"
+ W27_idea_4_2:0 "Anben, Anbennar"
+ W27_idea_4_2_desc:0 "Damenaire 4 desc"
+ W27_idea_5_2:0 "Lovers of Peace"
+ W27_idea_5_2_desc:0 "Damenaire 5 desc"
+ W27_idea_6_2:0 "Silver Tongues"
+ W27_idea_6_2_desc:0 "Damenaire 6 desc"
+ W27_idea_7_2:0 "Married to the Sea"
+ W27_idea_7_2_desc:0 "Damenaire 7 desc" 
+
+ W27_ideas_3:0 "Damenaire Ideas 3"
+ W27_ideas_3_start:0 "Damenaire Traditions 3"
+ W27_ideas_3_bonus:0 "Damenaire Ambition 3"
+ W27_idea_1_3:0 "Cannor's Heart"
+ W27_idea_1_3_desc:0 "Damenaire 1 desc"
+ W27_idea_2_3:0 "Finest Footmen Forever Found"
+ W27_idea_2_3_desc:0 "Damenaire 2 desc"
+ W27_idea_3_3:0 "Urban Folk"
+ W27_idea_3_3_desc:0 "Damenaire 3 desc"
+ W27_idea_4_3:0 "Anben, Anbennar"
+ W27_idea_4_3_desc:0 "Damenaire 4 desc"
+ W27_idea_5_3:0 "Lovers of Peace"
+ W27_idea_5_3_desc:0 "Damenaire 5 desc"
+ W27_idea_6_3:0 "Silver Tongues"
+ W27_idea_6_3_desc:0 "Damenaire 6 desc"
+ W27_idea_7_3:0 "Married to the Sea"
+ W27_idea_7_3_desc:0 "Damenaire 7 desc" 
+
+
+ W13_ideas_2:0 "Wesdam Ideas 2"
+ W13_ideas_2_start:0 "Wesdam Traditions 2"
+ W13_ideas_2_bonus:0 "Wesdam Ambition 2"
+ W13_idea_1_2:0 "Land Worth Fighting For"
+ W13_idea_1_2_desc:0 "Wesdam 1 desc"
+ W13_idea_2_2:0 "Finest Footmen Forever Found"
+ W13_idea_2_2_desc:0 "Wesdam 2 desc"
+ W13_idea_3_2:0 "Rallying the People"
+ W13_idea_3_2_desc:0 "Wesdam 3 desc"
+ W13_idea_4_2:0 "Anben, Anbennar"
+ W13_idea_4_2_desc:0 "Wesdam 4 desc"
+ W13_idea_5_2:0 "Between Anbenncóst and Lorentaine"
+ W13_idea_5_2_desc:0 "Wesdam 5 desc"
+ W13_idea_6_2:0 "Silver Tongues"
+ W13_idea_6_2_desc:0 "Wesdam 6 desc"
+ W13_idea_7_2:0 "Best of the West"
+ W13_idea_7_2_desc:0 "Wesdam 7 desc" 
+
+ W13_ideas_3:0 "Wesdam Ideas 3"
+ W13_ideas_3_start:0 "Wesdam Traditions 3"
+ W13_ideas_3_bonus:0 "Wesdam Ambition 3"
+ W13_idea_1_3:0 "Land Worth Fighting For"
+ W13_idea_1_3_desc:0 "Wesdam 1 desc"
+ W13_idea_2_3:0 "Finest Footmen Forever Found"
+ W13_idea_2_3_desc:0 "Wesdam 2 desc"
+ W13_idea_3_3:0 "Rallying the People"
+ W13_idea_3_3_desc:0 "Wesdam 3 desc"
+ W13_idea_4_3:0 "Anben, Anbennar"
+ W13_idea_4_3_desc:0 "Wesdam 4 desc"
+ W13_idea_5_3:0 "Between Anbenncóst and Lorentaine"
+ W13_idea_5_3_desc:0 "Wesdam 5 desc"
+ W13_idea_6_3:0 "Silver Tongues"
+ W13_idea_6_3_desc:0 "Wesdam 6 desc"
+ W13_idea_7_3:0 "Best of the West"
+ W13_idea_7_3_desc:0 "Wesdam 7 desc" 
