--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -3075,3 +3075,114 @@
  W13_idea_6_3_desc:0 "Wesdam 6 desc"
  W13_idea_7_3:0 "Best of the West"
  W13_idea_7_3_desc:0 "Wesdam 7 desc" 
+
+
+ A76_ideas_2:0 "Uelaire Ideas 2"
+ A76_ideas_2_start:0 "Uelaire Traditions 2"
+ A76_ideas_2_bonus:0 "Uelaire Ambition 2"
+ A76_idea_1_2:0 "Sons of the Sea"
+ A76_idea_1_2_desc:0 "Uelaire 1 desc"
+ A76_idea_2_2:0 "Finest Footmen Forever Found"
+ A76_idea_2_2_desc:0 "Uelaire 2 desc"
+ A76_idea_3_2:0 "Surrounded by Half-men"
+ A76_idea_3_2_desc:0 "Uelaire 3 desc"
+ A76_idea_4_2:0 "Anben, Anbennar"
+ A76_idea_4_2_desc:0 "Uelaire 4 desc"
+ A76_idea_5_2:0 "Elkmarcher Lumber"
+ A76_idea_5_2_desc:0 "Uelaire 5 desc"
+ A76_idea_6_2:0 "Silver Tongues"
+ A76_idea_6_2_desc:0 "Uelaire 6 desc"
+ A76_idea_7_2:0 "Tridents, Not Spears"
+ A76_idea_7_2_desc:0 "Uelaire 7 desc" 
+
+ A76_ideas_3:0 "Uelaire Ideas 3"
+ A76_ideas_3_start:0 "Uelaire Traditions 3"
+ A76_ideas_3_bonus:0 "Uelaire Ambition 3"
+ A76_idea_1_3:0 "Sons of the Sea"
+ A76_idea_1_3_desc:0 "Uelaire 1 desc"
+ A76_idea_2_3:0 "Finest Footmen Forever Found"
+ A76_idea_2_3_desc:0 "Uelaire 2 desc"
+ A76_idea_3_3:0 "Surrounded by Half-men"
+ A76_idea_3_3_desc:0 "Uelaire 3 desc"
+ A76_idea_4_3:0 "Anben, Anbennar"
+ A76_idea_4_3_desc:0 "Uelaire 4 desc"
+ A76_idea_5_3:0 "Elkmarcher Lumber"
+ A76_idea_5_3_desc:0 "Uelaire 5 desc"
+ A76_idea_6_3:0 "Silver Tongues"
+ A76_idea_6_3_desc:0 "Uelaire 6 desc"
+ A76_idea_7_3:0 "Tridents, Not Spears"
+ A76_idea_7_3_desc:0 "Uelaire 7 desc" 
+
+
+ A40_ideas_2:0 "Exwes Ideas 2"
+ A40_ideas_2_start:0 "Exwes Traditions 2"
+ A40_ideas_2_bonus:0 "Exwes Ambition 2"
+ A40_idea_1_2:0 "Fishermen"
+ A40_idea_1_2_desc:0 "Exwes 1 desc"
+ A40_idea_2_2:0 "Finest Footmen Forever Found"
+ A40_idea_2_2_desc:0 "Exwes 2 desc"
+ A40_idea_3_2:0 "A Silver Branch"
+ A40_idea_3_2_desc:0 "Exwes 3 desc"
+ A40_idea_4_2:0 "Anben, Anbennar"
+ A40_idea_4_2_desc:0 "Exwes 4 desc"
+ A40_idea_5_2:0 "Aleccian Tolerance"
+ A40_idea_5_2_desc:0 "Exwes 5 desc"
+ A40_idea_6_2:0 "Silver Tongues"
+ A40_idea_6_2_desc:0 "Exwes 6 desc"
+ A40_idea_7_2:0 "Ironhelms"
+ A40_idea_7_2_desc:0 "Exwes 7 desc" 
+
+ A40_ideas_3:0 "Exwes Ideas 3"
+ A40_ideas_3_start:0 "Exwes Traditions 3"
+ A40_ideas_3_bonus:0 "Exwes Ambition 3"
+ A40_idea_1_3:0 "Fishermen"
+ A40_idea_1_3_desc:0 "Exwes 1 desc"
+ A40_idea_2_3:0 "Finest Footmen Forever Found"
+ A40_idea_2_3_desc:0 "Exwes 2 desc"
+ A40_idea_3_3:0 "A Silver Branch"
+ A40_idea_3_3_desc:0 "Exwes 3 desc"
+ A40_idea_4_3:0 "Anben, Anbennar"
+ A40_idea_4_3_desc:0 "Exwes 4 desc"
+ A40_idea_5_3:0 "Aleccian Tolerance"
+ A40_idea_5_3_desc:0 "Exwes 5 desc"
+ A40_idea_6_3:0 "Silver Tongues"
+ A40_idea_6_3_desc:0 "Exwes 6 desc"
+ A40_idea_7_3:0 "Ironhelms"
+ A40_idea_7_3_desc:0 "Exwes 7 desc" 
+
+
+ W23_ideas_2:0 "Exelaire Ideas 2"
+ W23_ideas_2_start:0 "Exelaire Traditions 2"
+ W23_ideas_2_bonus:0 "Exelaire Ambition 2"
+ W23_idea_1_2:0 "Fishermen"
+ W23_idea_1_2_desc:0 "Exelaire 1 desc"
+ W23_idea_2_2:0 "Finest Footmen Forever Found"
+ W23_idea_2_2_desc:0 "Exelaire 2 desc"
+ W23_idea_3_2:0 "A Silver Branch"
+ W23_idea_3_2_desc:0 "Exelaire 3 desc"
+ W23_idea_4_2:0 "Anben, Anbennar"
+ W23_idea_4_2_desc:0 "Exelaire 4 desc"
+ W23_idea_5_2:0 "Aleccian Tolerance"
+ W23_idea_5_2_desc:0 "Exelaire 5 desc"
+ W23_idea_6_2:0 "Silver Tongues"
+ W23_idea_6_2_desc:0 "Exelaire 6 desc"
+ W23_idea_7_2:0 "Ironhelms"
+ W23_idea_7_2_desc:0 "Exelaire 7 desc" 
+
+ W23_ideas_3:0 "Exelaire Ideas 3"
+ W23_ideas_3_start:0 "Exelaire Traditions 3"
+ W23_ideas_3_bonus:0 "Exelaire Ambition 3"
+ W23_idea_1_3:0 "Mastering Uelos' Realm"
+ W23_idea_1_3_desc:0 "Exelaire 1 desc"
+ W23_idea_2_3:0 "Finest Footmen Forever Found"
+ W23_idea_2_3_desc:0 "Exelaire 2 desc"
+ W23_idea_3_3:0 "Not So Small"
+ W23_idea_3_3_desc:0 "Exelaire 3 desc"
+ W23_idea_4_3:0 "Anben, Anbennar"
+ W23_idea_4_3_desc:0 "Exelaire 4 desc"
+ W23_idea_5_3:0 "Tridentsmen"
+ W23_idea_5_3_desc:0 "Exelaire 5 desc"
+ W23_idea_6_3:0 "Silver Tongues"
+ W23_idea_6_3_desc:0 "Exelaire 6 desc"
+ W23_idea_7_3:0 "Respected At Last"
+ W23_idea_7_3_desc:0 "Exelaire 7 desc" 
