CoT formables mini rework

--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -89,21 +89,29 @@
  W41_ADJ:0 "Highholdic"
  
  # Formable Decision Loc
+
  sorncost_nation_title:0 "Reclaim the Sorncost Duchy"
  vinlorn_nation_title:0 "Unite the Winelords!"
  rosenica_nation_title:0 "Unite Rosenica"
+
  sottlan_nation_title:0 "Sottlan Forever"
  nottlan_nation_title:0 "Nottlan Together"
+
  drakksgard_nation_title:0 "Create Drakksgard"
  esedor_nation_title:0 "A New Alenic Realm"
  norinidor_nation_title:0 "Form Norinidor"
  the_reach_nation_title:0 "Unify The Reach"
- exelaire_nation_title:0 "Form Exelaire"
+ bisani_nation_title:0 "Proclaim the duchy of Bisan"
+
  golden_dominion_nation_title:0 "Proclaim Golden Unity"
  estonaire_nation_title:0 "Bind the Esmari Coast"
  estinipar_nation_title:0 "Solidify Inner Esmaria"
+
  high_damenaire_nation_title:0 "Proclaim High Damenaire"
  essdam_nation_title:0 "Enthrone the Grand Duke of Essdam"
+ exelaire_nation_title:0 "Form Exelaire"
+ wesdam_nation_title:0 "Establish the marquisate of Wesdam"
+
  lionor_nation_title:0 "Claim the Lion Throne"
  arannor_nation_title:0 "Create the Kingdom of Arannor"
  milcorissia_nation_title:0 "Resurgence of the Milcori"
