FL building rework and some other stuff

--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -102,6 +102,7 @@
  norinidor_nation_title:0 "Form Norinidor"
  the_reach_nation_title:0 "Unify The Reach"
  bisani_nation_title:0 "Proclaim the duchy of Bisan"
+ wex_nation_title:0 "Seize wexonard crown"
 
  golden_dominion_nation_title:0 "Proclaim Golden Unity"
  estonaire_nation_title:0 "Bind the Esmari Coast"
