--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -3,3 +3,38 @@
  cot_lilac_recovery:0 "Lilac War Recovery" #startup innit
  cot_lilac_recovery_desc:0 "The Lilac wars were brutal beyond belief and our people's cry for relief from the bloodshed has been heard. Now is a time of peace, mourning, and recovery."
  deruwren_circles:0 "Deruwren Circles"
+
+ building_regimental_camp_desc: "§TThis building gives additional §Y+0.25 force limit§! for every §Y10 development§! in this province.§!\n"
+
+ cot_force_limit_building_buff_1_0:0 "Desolete regimental camp"
+ desc_cot_force_limit_building_buff_1_0:0 "Tier 0 regimental camp\n§YNeeds 10 development to upgrade!§!"
+ cot_force_limit_building_buff_1_1:0 "Insignificant regimental camp"
+ desc_cot_force_limit_building_buff_1_1:0 "Tier 1 regimental camp\n§YNeeds 20 development to upgrade!§!"
+ cot_force_limit_building_buff_1_2:0 "Small regimental camp"
+ desc_cot_force_limit_building_buff_1_2:0 "Tier 2 regimental camp\n§YNeeds 30 development to upgrade!§!"
+ cot_force_limit_building_buff_1_3:0 "Medium regimental camp"
+ desc_cot_force_limit_building_buff_1_3:0 "Tier 3 regimental camp\n§YNeeds 40 development to upgrade!§!"
+ cot_force_limit_building_buff_1_4:0 "Large regimental camp"
+ desc_cot_force_limit_building_buff_1_4:0 "Tier 4 regimental camp\n§YNeeds 50 development to upgrade!§!"
+ cot_force_limit_building_buff_1_5:0 "Great regimental camp"
+ desc_cot_force_limit_building_buff_1_5:0 "Tier 5 regimental camp\n§YNeeds 60 development to upgrade!§!"
+ cot_force_limit_building_buff_1_6:0 "Legendary regimental camp"
+ desc_cot_force_limit_building_buff_1_6:0 "Tier 6 regimental camp"
+
+
+ building_conscription_center_desc: "§TThis building gives additional §Y+0.5 force limit§! for every §Y10 development§! in this province.§!\n"
+
+ cot_force_limit_building_buff_2_0:0 "Desolete conscription center"
+ desc_cot_force_limit_building_buff_2_0:0 "Tier 0 conscription center\n§YNeeds 10 development to upgrade!§!"
+ cot_force_limit_building_buff_2_1:0 "Insignificant conscription center"
+ desc_cot_force_limit_building_buff_2_1:0 "Tier 1 conscription center\n§YNeeds 20 development to upgrade!§!"
+ cot_force_limit_building_buff_2_2:0 "Small conscription center"
+ desc_cot_force_limit_building_buff_2_2:0 "Tier 2 conscription center\n§YNeeds 30 development to upgrade!§!"
+ cot_force_limit_building_buff_2_3:0 "Medium conscription center"
+ desc_cot_force_limit_building_buff_2_3:0 "Tier 3 conscription center\n§YNeeds 40 development to upgrade!§!"
+ cot_force_limit_building_buff_2_4:0 "Large conscription center"
+ desc_cot_force_limit_building_buff_2_4:0 "Tier 4 conscription center\n§YNeeds 50 development to upgrade!§!"
+ cot_force_limit_building_buff_2_5:0 "Great conscription center"
+ desc_cot_force_limit_building_buff_2_5:0 "Tier 5 conscription center\n§YNeeds 60 development to upgrade!§!"
+ cot_force_limit_building_buff_2_6:0 "Legendary conscription center"
+ desc_cot_force_limit_building_buff_2_6:0 "Tier 6 conscription center"
