Added formables back

--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -16,15 +16,15 @@
  CoT_ideagroups.1.b:0 "Upgrade current ideas"
 
  cot_ideas_upgrade.2.t:0 "Wex Triumphant"
- cot_ideas_upgrade.2.d:0 "Almighty ruler, your realm is the envy of people from Lorent to Bulwar. It is time for an upgrade, and a new era of ascendency begins now!!"
+ cot_ideas_upgrade.2.d:0 "Almighty ruler, your realm is the envy of people from Gerudia to Bulwar. It is time for an upgrade, and a new era of ascendency begins now!!"
  CoT_ideagroups.2.a:0 "Wex must rule, forever!"
 
  cot_ideas_upgrade.3.t:0 "Disgrace of Wex"
  cot_ideas_upgrade.3.d:0 "Jackals and thieves, they were plotting our downfall since the beginning... We did not see it coming, and now we have lost the emperorship! A disaster, can we ever recover?"
  CoT_ideagroups.3.a:0 "Wex must rule again!"
 
- cot_ideas_upgrade.4.t:0 "Kings of Wex"
- cot_ideas_upgrade.4.d:0 "Almighty ruler, your realm is the envy of people from Lorent to Bulwar. It is time for an upgrade, and a new era of ascendency begins now!!"
+ cot_ideas_upgrade.4.t:0 "Gawed ascendant"
+ cot_ideas_upgrade.4.d:0 "Almighty ruler, your realm is the envy of people from Gerudia to Bulwar. It is time for an upgrade, and a new era of ascendency begins now!!"
  CoT_ideagroups.4.a:0 "The Eagle Looms!"
 
  cot_ideas_upgrade.5.t:0 "TODO"
