--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -38,3 +38,10 @@
  desc_cot_force_limit_building_buff_2_5:0 "Tier 5 conscription center\n§YNeeds 60 development to upgrade!§!"
  cot_force_limit_building_buff_2_6:0 "Legendary conscription center"
  desc_cot_force_limit_building_buff_2_6:0 "Tier 6 conscription center"
+
+
+ cot_misc_events.3.t:0 "Korgus returns"
+ cot_misc_events.3.d:0 "The last thing Korgus saw before his death was the flash of the red haired warrior's blade. Then, nothing, darkness.\n\nSuddenly, he saw a flash of light, as a mysterious voice spoke\n\n\n\"Welcome, son"\n\n\"Father, is that you?" Korgus asked\n\n\"You have proven your worth as a great warrior and a leader. Now let me reward you for it. You will take a place at my side, as the new god of war!"\n\nFor a few moments Korgus stood in silence, then, with visible determination and a sense of duty he uttered:\n\n\n\"My task is not yet done. I will not sit idly as my brothers and sisters fight. Father, if there's one thing I want more than to be by your side, it is to lead my brave warriors to battle, one last time!""
+ cot_misc_events.3.a: "We shall follow Korgus, one last time!"
+ korgus_event_tooltip_1:0 "§GAll of our technologies are increased to 3!§!\n"
+ korgus_event_tooltip_2:0 "§GWe gain subjugation casus belli on all orcs in Escann! All will kneel before Korgus!§!\n"
