--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -4,7 +4,7 @@
  cot_lilac_recovery_desc:0 "The Lilac wars were brutal beyond belief and our people's cry for relief from the bloodshed has been heard. Now is a time of peace, mourning, and recovery."
  deruwren_circles:0 "Deruwren Circles"
 
- building_regimental_camp_desc: "§TThis building gives additional §Y+0.25 force limit§! for every §Y10 development§! in this province.§!\n"
+ building_regimental_camp_desc: "§TFor every §Y10 development§! in this province this building gives additional: §Y\nLand Force Limit: +0.25§! \n§!\n"
 
  cot_force_limit_building_buff_1_0:0 "Desolete regimental camp"
  desc_cot_force_limit_building_buff_1_0:0 "Tier 0 regimental camp\n§YNeeds 10 development to upgrade!§!"
@@ -22,7 +22,7 @@
  desc_cot_force_limit_building_buff_1_6:0 "Tier 6 regimental camp"
 
 
- building_conscription_center_desc: "§TThis building gives additional §Y+0.5 force limit§! for every §Y10 development§! in this province.§!\n"
+ building_conscription_center_desc: "§TFor every §Y10 development§! in this province this building gives additional: §Y\nLand Force Limit: +0.50§! \n§!\n"
 
  cot_force_limit_building_buff_2_0:0 "Desolete conscription center"
  desc_cot_force_limit_building_buff_2_0:0 "Tier 0 conscription center\n§YNeeds 10 development to upgrade!§!"
@@ -38,6 +38,42 @@
  desc_cot_force_limit_building_buff_2_5:0 "Tier 5 conscription center\n§YNeeds 60 development to upgrade!§!"
  cot_force_limit_building_buff_2_6:0 "Legendary conscription center"
  desc_cot_force_limit_building_buff_2_6:0 "Tier 6 conscription center"
+
+
+ building_shipyard_desc: "§TFor every §Y10 development§! in this province this building gives additional: §Y\nNaval Force Limit: +0.25\nLocac Shipbuilding Time: -5%\nLocal Ship Repair: +5%\n§! §!\n"
+
+ cot_shipyard_building_buff_1_0:0 "Desolete shipyard"
+ desc_cot_shipyard_building_buff_1_0:0 "Tier 0 shipyard\n§YNeeds 10 development to upgrade!§!"
+ cot_shipyard_building_buff_1_1:0 "Insignificant shipyard"
+ desc_cot_shipyard_building_buff_1_1:0 "Tier 1 shipyard\n§YNeeds 20 development to upgrade!§!"
+ cot_shipyard_building_buff_1_2:0 "Small shipyard"
+ desc_cot_shipyard_building_buff_1_2:0 "Tier 2 shipyard\n§YNeeds 30 development to upgrade!§!"
+ cot_shipyard_building_buff_1_3:0 "Medium shipyard"
+ desc_cot_shipyard_building_buff_1_3:0 "Tier 3 shipyard\n§YNeeds 40 development to upgrade!§!"
+ cot_shipyard_building_buff_1_4:0 "Large shipyard"
+ desc_cot_shipyard_building_buff_1_4:0 "Tier 4 shipyard\n§YNeeds 50 development to upgrade!§!"
+ cot_shipyard_building_buff_1_5:0 "Great shipyard"
+ desc_cot_shipyard_building_buff_1_5:0 "Tier 5 shipyard\n§YNeeds 60 development to upgrade!§!"
+ cot_shipyard_building_buff_1_6:0 "Legendary shipyard"
+ desc_cot_shipyard_building_buff_1_6:0 "Tier 6 shipyard"
+
+
+ building_grand_shipyard_desc: "§TFor every §Y10 development§! in this province this building gives additional: §Y\nNaval Force Limit: +0.50\nLocac Shipbuilding Time: -10%\nLocal Ship Repair: +10%\n§! §!\n"
+
+ cot_shipyard_building_buff_2_0:0 "Desolete grand shipyard"
+ desc_cot_shipyard_building_buff_2_0:0 "Tier 0 grand shipyard\n§YNeeds 10 development to upgrade!§!"
+ cot_shipyard_building_buff_2_1:0 "Insignificant grand shipyard"
+ desc_cot_shipyard_building_buff_2_1:0 "Tier 1 grand shipyard\n§YNeeds 20 development to upgrade!§!"
+ cot_shipyard_building_buff_2_2:0 "Small grand shipyard"
+ desc_cot_shipyard_building_buff_2_2:0 "Tier 2 grand shipyard\n§YNeeds 30 development to upgrade!§!"
+ cot_shipyard_building_buff_2_3:0 "Medium grand shipyard"
+ desc_cot_shipyard_building_buff_2_3:0 "Tier 3 grand shipyard\n§YNeeds 40 development to upgrade!§!"
+ cot_shipyard_building_buff_2_4:0 "Large grand shipyard"
+ desc_cot_shipyard_building_buff_2_4:0 "Tier 4 grand shipyard\n§YNeeds 50 development to upgrade!§!"
+ cot_shipyard_building_buff_2_5:0 "Great grand shipyard"
+ desc_cot_shipyard_building_buff_2_5:0 "Tier 5 grand shipyard\n§YNeeds 60 development to upgrade!§!"
+ cot_shipyard_building_buff_2_6:0 "Legendary grand shipyard"
+ desc_cot_shipyard_building_buff_2_6:0 "Tier 6 grand shipyard"
 
 
  cot_misc_events.3.t:0 "Korgus returns"
