--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -3186,3 +3186,24 @@
  W23_idea_6_3_desc:0 "Exelaire 6 desc"
  W23_idea_7_3:0 "Respected At Last"
  W23_idea_7_3_desc:0 "Exelaire 7 desc" 
+
+
+  ##### ESMARIA #####
+
+ Z46_ideas_3:0 "Esmari Ideas 3"
+ Z46_ideas_3_start:0 "Esmari Traditions 3"
+ Z46_ideas_3_bonus:0 "Esmari Ambition 3"
+ Z46_idea_1_3:0 "Warring Nobles"
+ Z46_idea_1_3_desc:0 "Esmari 1 desc"
+ Z46_idea_2_3:0 "Finest Footmen Forever Found"
+ Z46_idea_2_3_desc:0 "Esmari 2 desc"
+ Z46_idea_3_3:0 "United at Last"
+ Z46_idea_3_3_desc:0 "Esmari 3 desc"
+ Z46_idea_4_3:0 "Anben, Anbennar"
+ Z46_idea_4_3_desc:0 "Esmari 4 desc"
+ Z46_idea_5_3:0 "Coastal Protection Act"
+ Z46_idea_5_3_desc:0 "Esmari 5 desc"
+ Z46_idea_6_3:0 "Silver Tongues"
+ Z46_idea_6_3_desc:0 "Esmari 6 desc"
+ Z46_idea_7_3:0 "Council of Esmaria"
+ Z46_idea_7_3_desc:0 "Esmari 7 desc" 
