--- a/localisation/CoT_prov_names_adj_l_english.yml
+++ b/localisation/CoT_prov_names_adj_l_english.yml
@@ -1,37 +1,37 @@
 ﻿l_english:
- PROV7946:0 "Spiketop"
- PROV7947:0 "Cavecastle"
- PROV7981:0 "Fanged Cliffs"
- PROV7980:0 "Ragged Ascent"
- PROV7979:0 "Spiderden"
- PROV7978:0 "Death Plateau"
- PROV7977:0 "Goblin Heights"
- PROV7976:0 "Zaelan's way"
- PROV7975:0 "Sanity's Edge"
- PROV7974:0 "Dookzak"
- PROV7973:0 "Shadowed Trail"
- PROV7972:0 "Grogir's Folly"
- PROV7971:0 "Traveller's Respite"
- PROV7970:0 "Woodveil"
- PROV7969:0 "Gerekrack"
- PROV7968:0 "Watyler Valley"
- PROV7967:0 "Varas' Post"
- PROV7966:0 "Eagle's Peak"
- PROV7965:0 "Falcon's Sleep"
- PROV7964:0 "Harpies Meet"
- PROV7963:0 "Trial of Tyrants"
- PROV7962:0 "Zarakroad"
- PROV7961:0 "Rotkaz Fall"
- PROV7960:0 "Asra-Zarak"
- PROV7959:0 "Mountainheart"
- PROV7958:0 "Ramral"
- PROV7957:0 "Outer Cutback"
- PROV7956:0 "Remnants of Kings"
- PROV7955:0 "Copanal"
- PROV7954:0 "Last Light"
- PROV7953:0 "The Drowned Swamp"
- PROV7952:0 "Agorlam"
- PROV7951:0 "Satyrtar"
- PROV7950:0 "Vyr Lataza"
- PROV7949:0 "Birachsal"
- PROV7948:0 "Feyrest"
+ PROV_ADJ7946:0 "Spiketop"
+ PROV_ADJ7947:0 "Cavecastle"
+ PROV_ADJ7981:0 "Fanged Cliffs"
+ PROV_ADJ7980:0 "Ragged Ascent"
+ PROV_ADJ7979:0 "Spiderden"
+ PROV_ADJ7978:0 "Death Plateau"
+ PROV_ADJ7977:0 "Goblin Heights"
+ PROV_ADJ7976:0 "Zaelan's way"
+ PROV_ADJ7975:0 "Sanity's Edge"
+ PROV_ADJ7974:0 "Dookzak"
+ PROV_ADJ7973:0 "Shadowed Trail"
+ PROV_ADJ7972:0 "Grogir's Folly"
+ PROV_ADJ7971:0 "Traveller's Respite"
+ PROV_ADJ7970:0 "Woodveil"
+ PROV_ADJ7969:0 "Gerekrack"
+ PROV_ADJ7968:0 "Watyler Valley"
+ PROV_ADJ7967:0 "Varas' Post"
+ PROV_ADJ7966:0 "Eagle's Peak"
+ PROV_ADJ7965:0 "Falcon's Sleep"
+ PROV_ADJ7964:0 "Harpies Meet"
+ PROV_ADJ7963:0 "Trial of Tyrants"
+ PROV_ADJ7962:0 "Zarakroad"
+ PROV_ADJ7961:0 "Rotkaz Fall"
+ PROV_ADJ7960:0 "Asra-Zarak"
+ PROV_ADJ7959:0 "Mountainheart"
+ PROV_ADJ7958:0 "Ramral"
+ PROV_ADJ7957:0 "Outer Cutback"
+ PROV_ADJ7956:0 "Remnants of Kings"
+ PROV_ADJ7955:0 "Copanal"
+ PROV_ADJ7954:0 "Last Light"
+ PROV_ADJ7953:0 "The Drowned Swamp"
+ PROV_ADJ7952:0 "Agorlam"
+ PROV_ADJ7951:0 "Satyrtar"
+ PROV_ADJ7950:0 "Vyr Lataza"
+ PROV_ADJ7949:0 "Birachsal"
+ PROV_ADJ7948:0 "Feyrest"
