Giberd, Portnamm, Iochand ideas, Iochand formable changes
Only flip to human lencori when taking Iochand ideas

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -617,6 +617,43 @@
  W15_idea_7_3_desc:0 "Vinlorn 7 desc" 
 
 
+ A80_ideas_2:0 "Iochand Ideas 2"
+ A80_ideas_2_start:0 "Iochand Traditions 2"
+ A80_ideas_2_bonus:0 "Iochand Ambition 2"
+ A80_idea_1_2:0 "Gnomish Ingenuity"
+ A80_idea_1_2_desc:0 "Iochand 1 desc"
+ A80_idea_2_2:0 "Vines and Vineyards"
+ A80_idea_2_2_desc:0 "Iochand 2 desc"
+ A80_idea_3_2:0 "Lencori Ties"
+ A80_idea_3_2_desc:0 "Iochand 3 desc"
+ A80_idea_4_2:0 "Hereditary Hierarchies"
+ A80_idea_4_2_desc:0 "Iochand 4 desc"
+ A80_idea_5_2:0 "Traditional Knights, Modern Firearms"
+ A80_idea_5_2_desc:0 "Iochand 5 desc"
+ A80_idea_6_2:0 "Noble Leaders"
+ A80_idea_6_2_desc:0 "Iochand 6 desc"
+ A80_idea_7_2:0 "Last Gnomish Kingdom"
+ A80_idea_7_2_desc:0 "Iochand 7 desc"
+
+ A80_ideas_3:0 "Iochand Ideas 3"
+ A80_ideas_3_start:0 "Iochand Traditions 3"
+ A80_ideas_3_bonus:0 "Iochand Ambition 3"
+ A80_idea_1_3:0 "Gnomish Ingenuity"
+ A80_idea_1_3_desc:0 "Iochand 1 desc"
+ A80_idea_2_3:0 "Vines and Vineyards"
+ A80_idea_2_3_desc:0 "Iochand 2 desc"
+ A80_idea_3_3:0 "Lencori Ties"
+ A80_idea_3_3_desc:0 "Iochand 3 desc"
+ A80_idea_4_3:0 "Hereditary Hierarchies"
+ A80_idea_4_3_desc:0 "Iochand 4 desc"
+ A80_idea_5_3:0 "Traditional Knights, Modern Firearms"
+ A80_idea_5_3_desc:0 "Iochand 5 desc"
+ A80_idea_6_3:0 "Noble Leaders"
+ A80_idea_6_3_desc:0 "Iochand 6 desc"
+ A80_idea_7_3:0 "Last Gnomish Kingdom"
+ A80_idea_7_3_desc:0 "Iochand 7 desc"
+
+
  ##### ALEN #####
 
  A13_ideas_2:0 "Gawedi Ideas 2"
@@ -3207,3 +3244,114 @@
  Z46_idea_6_3_desc:0 "Esmari 6 desc"
  Z46_idea_7_3:0 "Council of Esmaria"
  Z46_idea_7_3_desc:0 "Esmari 7 desc" 
+
+  ##### GNOMES #####
+
+ A81_ideas_1:0 "Giberd Ideas 1"
+ A81_ideas_1_start:0 "Giberd Traditions 1"
+ A81_ideas_1_bonus:0 "Giberd Ambition 1"
+ A81_idea_1_1:0 "Gibing day"
+ A81_idea_1_1_desc:0 "Giberd 1 desc"
+ A81_idea_2_1:0 "Pioneers Of Artificery"
+ A81_idea_2_1_desc:0 "Giberd 2 desc"
+ A81_idea_3_1:0 "Giberd Academy of Engineering"
+ A81_idea_3_1_desc:0 "Giberd 3 desc"
+ A81_idea_4_1:0 "Brilliant Inventions"
+ A81_idea_4_1_desc:0 "Giberd 4 desc"
+ A81_idea_5_1:0 "Mechanized City Defense System"
+ A81_idea_5_1_desc:0 "Giberd 5 desc"
+ A81_idea_6_1:0 "The Future Of Warfare"
+ A81_idea_6_1_desc:0 "Giberd 6 desc"
+ A81_idea_7_1:0 "Theory of Everything"
+ A81_idea_7_1_desc:0 "Giberd 7 desc" 
+
+ A81_ideas_2:0 "Giberd Ideas 2"
+ A81_ideas_2_start:0 "Giberd Traditions 2"
+ A81_ideas_2_bonus:0 "Giberd Ambition 2"
+ A81_idea_1_2:0 "Gibing day"
+ A81_idea_1_2_desc:0 "Giberd 1 desc"
+ A81_idea_2_2:0 "Pioneers Of Artificery"
+ A81_idea_2_2_desc:0 "Giberd 2 desc"
+ A81_idea_3_2:0 "Giberd Academy of Engineering"
+ A81_idea_3_2_desc:0 "Giberd 3 desc"
+ A81_idea_4_2:0 "Brilliant Inventions"
+ A81_idea_4_2_desc:0 "Giberd 4 desc"
+ A81_idea_5_2:0 "Mechanized City Defense System"
+ A81_idea_5_2_desc:0 "Giberd 5 desc"
+ A81_idea_6_2:0 "The Future Of Warfare"
+ A81_idea_6_2_desc:0 "Giberd 6 desc"
+ A81_idea_7_2:0 "Theory of Everything"
+ A81_idea_7_2_desc:0 "Giberd 7 desc" 
+
+ A81_ideas_3:0 "Giberd Ideas 3"
+ A81_ideas_3_start:0 "Giberd Traditions 3"
+ A81_ideas_3_bonus:0 "Giberd Ambition 3"
+ A81_idea_1_3:0 "Gibing day"
+ A81_idea_1_3_desc:0 "Giberd 1 desc"
+ A81_idea_2_3:0 "Pioneers Of Artificery"
+ A81_idea_2_3_desc:0 "Giberd 2 desc"
+ A81_idea_3_3:0 "Giberd Academy of Engineering"
+ A81_idea_3_3_desc:0 "Giberd 3 desc"
+ A81_idea_4_3:0 "Brilliant Inventions"
+ A81_idea_4_3_desc:0 "Giberd 4 desc"
+ A81_idea_5_3:0 "Mechanized City Defense System"
+ A81_idea_5_3_desc:0 "Giberd 5 desc"
+ A81_idea_6_3:0 "The Future Of Warfare"
+ A81_idea_6_3_desc:0 "Giberd 6 desc"
+ A81_idea_7_3:0 "Theory of Everything"
+ A81_idea_7_3_desc:0 "Giberd 7 desc" 
+
+
+ A19_ideas_1:0 "Portnamm Ideas 1"
+ A19_ideas_1_start:0 "Portnamm Traditions 1"
+ A19_ideas_1_bonus:0 "Portnamm Ambition 1"
+ A19_idea_1_1:0 "Sponsor Adventurer Explorers"
+ A19_idea_1_1_desc:0 "Portnamm 1 desc"
+ A19_idea_2_1:0 "Pioneers Of Artificery"
+ A19_idea_2_1_desc:0 "Portnamm 2 desc"
+ A19_idea_3_1:0 "Portroy Merchant Guild"
+ A19_idea_3_1_desc:0 "Portnamm 3 desc"
+ A19_idea_4_1:0 "Brilliant Inventions"
+ A19_idea_4_1_desc:0 "Portnamm 4 desc"
+ A19_idea_5_1:0 "City of Gnome's Desire"
+ A19_idea_5_1_desc:0 "Portnamm 5 desc"
+ A19_idea_6_1:0 "The Future Of Warfare"
+ A19_idea_6_1_desc:0 "Portnamm 6 desc"
+ A19_idea_7_1:0 "Among Humans, Elves and Halflings"
+ A19_idea_7_1_desc:0 "Portnamm 7 desc"
+
+ A19_ideas_2:0 "Portnamm Ideas 1"
+ A19_ideas_2_start:0 "Portnamm Traditions 1"
+ A19_ideas_2_bonus:0 "Portnamm Ambition 1"
+ A19_idea_1_2:0 "Sponsor Adventurer Explorers"
+ A19_idea_1_2_desc:0 "Portnamm 1 desc"
+ A19_idea_2_2:0 "Pioneers Of Artificery"
+ A19_idea_2_2_desc:0 "Portnamm 2 desc"
+ A19_idea_3_2:0 "Portroy Merchant Guild"
+ A19_idea_3_2_desc:0 "Portnamm 3 desc"
+ A19_idea_4_2:0 "Brilliant Inventions"
+ A19_idea_4_2_desc:0 "Portnamm 4 desc"
+ A19_idea_5_2:0 "City of Gnome's Desire"
+ A19_idea_5_2_desc:0 "Portnamm 5 desc"
+ A19_idea_6_2:0 "The Future Of Warfare"
+ A19_idea_6_2_desc:0 "Portnamm 6 desc"
+ A19_idea_7_2:0 "Among Humans, Elves and Halflings"
+ A19_idea_7_2_desc:0 "Portnamm 7 desc"
+
+ A19_ideas_3:0 "Portnamm Ideas 1"
+ A19_ideas_3_start:0 "Portnamm Traditions 1"
+ A19_ideas_3_bonus:0 "Portnamm Ambition 1"
+ A19_idea_1_3:0 "Sponsor Adventurer Explorers"
+ A19_idea_1_3_desc:0 "Portnamm 1 desc"
+ A19_idea_2_3:0 "Pioneers Of Artificery"
+ A19_idea_2_3_desc:0 "Portnamm 2 desc"
+ A19_idea_3_3:0 "Portroy Merchant Guild"
+ A19_idea_3_3_desc:0 "Portnamm 3 desc"
+ A19_idea_4_3:0 "Brilliant Inventions"
+ A19_idea_4_3_desc:0 "Portnamm 4 desc"
+ A19_idea_5_3:0 "City of Gnome's Desire"
+ A19_idea_5_3_desc:0 "Portnamm 5 desc"
+ A19_idea_6_3:0 "The Future Of Warfare"
+ A19_idea_6_3_desc:0 "Portnamm 6 desc"
+ A19_idea_7_3:0 "Among Humans, Elves and Halflings"
+ A19_idea_7_3_desc:0 "Portnamm 7 desc"
